# nougat

./: Cargo.toml  LICENSE  README.md
examples/: example.toml
src/: config.rs  lib.rs  main.rs  photon.rs  random.rs  ray.rs  slab.rs
