[package]
name = "nougat"
version = "0.1.0"
edition = "2024"
authors = ["Mihir Manna"]
license = "MIT"

[dependencies]
anyhow = "1.0.103"
glam = "0.33.2"
indicatif = { version = "0.18.6", features = ["rayon"] }
rand = "0.10.2"
rand_distr = "0.6.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.3"
